@@ -115,7 +115,7 @@ public class MainScreen extends HorizontalLayout {
 					} else {
 						errViewType = ErrorView.class;
 					}
-					return errViewType.newInstance();
+					return errViewType.getDeclaredConstructor().newInstance();
 				} catch (Exception e) {
 					throw new RuntimeException(e);
 				}
@@ -190,7 +190,7 @@ public class MainScreen extends HorizontalLayout {
 				I18nProperties.getCaption(Captions.mainMenuStatistics),
 				VaadinIcons.BAR_CHART);
 		}
-		if (permitted(ui, UserRight.PERSON_VIEW)) {
+		if (permitted(ui, FeatureType.PERSON_MANAGEMENT, UserRight.PERSON_VIEW)) {
 			ControllerProvider.getPersonController().registerViews(navigator);
 			menu.addView(PersonsView.class, PersonsView.VIEW_NAME, I18nProperties.getCaption(Captions.mainMenuPersons), VaadinIcons.USER_CARD);
 		}
